[gd_scene load_steps=34 format=2]

[ext_resource path="res://media/graphics/zombie.png" type="Texture" id=1]
[ext_resource path="res://objects/Zombie.gd" type="Script" id=2]
[ext_resource path="res://shaders/Colorizer.shader" type="Shader" id=3]
[ext_resource path="res://objects/Fire.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 4.0

[sub_resource type="CircleShape2D" id=26]
radius = 2.0

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 10, 4 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 2, 4 )

[sub_resource type="ShaderMaterial" id=27]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/AUTO_REPLACE = false
shader_param/IGNORE_ALPHA = false
shader_param/COLOR_A = Color( 1, 1, 1, 1 )
shader_param/COLOR_A_REPLACEMENT = Color( 1, 1, 1, 1 )
shader_param/COLOR_B = Color( 0, 0, 0, 1 )
shader_param/COLOR_B_REPLACEMENT = Color( 0, 0, 0, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 136, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 152, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 104, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 88, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Dead",
"speed": 8.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Fall",
"speed": 8.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Attack",
"speed": 8.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Shamble",
"speed": 5.0
} ]

[node name="Zombie" type="KinematicBody2D"]
position = Vector2( 673.989, 66395.4 )
collision_layer = 8
collision_mask = 527
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitArea" type="Area2D" parent="."]
position = Vector2( 2, -0.5 )
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 26 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 28 )

[node name="EnemyDetector" type="Area2D" parent="."]
position = Vector2( 2, 0 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource( 29 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 27 )
frames = SubResource( 25 )
animation = "Fall"
playing = true

[node name="Fire" parent="." instance=ExtResource( 4 )]
position = Vector2( -1.66181, -4.84331 )
rotation = -0.261799
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
